Bug 903023 - memset with 0 if the buffer of audio chunk is null. r=roc